feat(favorite): add openapi for server side
