# openapi/openapi.yml
@@ -18,6 +18,15 @@ servers:
       basePath:
         default: api
 tags:
+  - name: addFavorite
+    description: Add Favorite
+    x-displayName: addFavorite
+  - name: listFavorite
+    description: List Favorite
+    x-displayName: listFavorite
+  - name: removeFavorite
+    description: Remove Favorite
+    x-displayName: removeFavorite
   - name: getInstrumentById
     description: Get Instrument by ID
     x-displayName: getInstrumentById
@@ -40,6 +49,102 @@ tags:
     description: User Registration
     x-displayName: userRegistration
 paths:
+  /favorite/add:
+    post:
+      description: Add Favorite
+      summary: Add Favorite
+      operationId: addFavorite
+      tags:
+        - addFavorite
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddFavoriteRequestBody'
+        required: true
+      responses:
+        '200':
+          description: Instrument Details
+          content:
+            application/json:
+              schema:
+                type: object
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientError'
+        default:
+          description: server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerError'
+  /favorite/list:
+    post:
+      description: List Favorite
+      summary: List Favorite
+      operationId: listFavorite
+      tags:
+        - listFavorite
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InstrumentDetail'
+        required: true
+      responses:
+        '200':
+          description: Instrument Details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListFavoriteResponseBody'
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientError'
+        default:
+          description: server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerError'
+  /favorite/remove:
+    post:
+      description: Remove Favorite
+      summary: Remove Favorite
+      operationId: removeFavorite
+      tags:
+        - removeFavorite
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RemoveFavoriteRequestBody'
+        required: true
+      responses:
+        '200':
+          description: Instrument Details
+          content:
+            application/json:
+              schema:
+                type: object
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientError'
+        default:
+          description: server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServerError'
   /instrument/{instrumentId}:
     get:
       description: Get Instrument by ID
@@ -262,16 +367,6 @@ components:
           description: Error description
       example:
         message: Client Error
-    ServerError:
-      type: object
-      required:
-        - message
-      properties:
-        message:
-          type: string
-          description: A description of the error.
-      example:
-        message: Internal Server Error. Please try again later.
     InstrumentDetail:
       type: object
       required:
@@ -279,10 +374,10 @@ components:
         - name
         - type
         - manufacturer
-        - manufacturerDate
-        - releaseDate
+        - manufacturer_date
+        - release_date
         - country
-        - basicMaterials
+        - basic_materials
       properties:
         id:
           type: integer
@@ -303,6 +398,38 @@ components:
           type: array
           items:
             type: string
+    ServerError:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          description: A description of the error.
+      example:
+        message: Internal Server Error. Please try again later.
+    AddFavoriteRequestBody:
+      type: object
+      required:
+        - instrument_id
+      properties:
+        instrument_id:
+          type: string
+    ListFavoriteResponseBody:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            type: >-
+              ./../common/InstrumentDetail.yml#/components/schemas/InstrumentDetail
+    RemoveFavoriteRequestBody:
+      type: object
+      required:
+        - instrument_id
+      properties:
+        instrument_id:
+          type: string
     GetInstrumentTypesResponse:
       type: object
       properties:
@@ -444,6 +571,15 @@ components:
         password:
           type: string
 x-tagGroups:
+  - name: Add Favorite
+    tags:
+      - addFavorite
+  - name: List Favorite
+    tags:
+      - listFavorite
+  - name: Remove Favorite
+    tags:
+      - removeFavorite
   - name: Get Instrument by ID
     tags:
       - getInstrumentById
